--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     loop
                     crossorigin
                     webkit-playsinline
+                    muted
                     autoplay
                     playsinline
                 ></video>
